# heuristics2024W

./: README.md  pyproject.toml
data/statistical_testing/: data_medium.csv  data_small.csv
data/test_instances/: test  test_1
data/test_instances/large/: inst_1000_60_00001_pre_comp_val.pkl  inst_1000_60_00002_pre_comp_val.pkl  inst_1000_60_00003_pre_comp_val.pkl  inst_1000_60_00004_pre_comp_val.pkl  inst_1000_60_00005_pre_comp_val.pkl  inst_1000_60_00006_pre_comp_val.pkl  inst_1000_60_00007_pre_comp_val.pkl  inst_1000_60_00008_pre_comp_val.pkl  inst_1000_60_00009_pre_comp_val.pkl  inst_1000_60_00010_pre_comp_val.pkl
data/test_instances/medium/: inst_200_20_00001_pre_comp_val.pkl  inst_200_20_00002_pre_comp_val.pkl  inst_200_20_00003_pre_comp_val.pkl  inst_200_20_00004_pre_comp_val.pkl  inst_200_20_00005_pre_comp_val.pkl  inst_200_20_00006_pre_comp_val.pkl  inst_200_20_00007_pre_comp_val.pkl  inst_200_20_00008_pre_comp_val.pkl  inst_200_20_00009_pre_comp_val.pkl  inst_200_20_00010_pre_comp_val.pkl
data/test_instances/medium_large/: inst_500_40_00001_pre_comp_val.pkl  inst_500_40_00004_pre_comp_val.pkl  inst_500_40_00007_pre_comp_val.pkl  inst_500_40_00010_pre_comp_val.pkl  inst_500_40_00013_pre_comp_val.pkl  inst_500_40_00016_pre_comp_val.pkl  (+1 more)
ex1/: MWCCP.py  MWCCP_instance.py  evaluation.py  experiments.py  local_search.py  read_instance.py  test.py
src/: MWCCP.py  Statistical_Testtool.ipynb  additional_tests_genetic.py  evaluation.py  experiments_Ex1.py  local_search.py  read_instance.py  statistical_testing.py  test.py  tuning.py
(+46 files in other folders)
