[tool.poetry]
name = "heuristics2024w"
version = "0.1.0"
description = ""
authors = ["Lukas <e11911069@student.tuwien.ac.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymhlib = "^0.1.5"
smac = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
